--- a/Dispositioner/1. Confidentiality.md
+++ b/Dispositioner/1. Confidentiality.md
@@ -123,9 +123,9 @@ I stedet for at kryptere hele beskeden på en gang, så sker det **over flere ga
 
 Der findes forskellige måder:
 
-* **OFB: Output Feedback**
-* **CBC: Cipher Block Chaining**
-* **CTR: Counter Mode**
+> * **OFB: Output Feedback**
+> * **CBC: Cipher Block Chaining**
+> * **CTR: Counter Mode**
 
 Alle tre måder virker ved:
 
