tilføjet rigtig disposition til 1. og rettet en fejl

--- a/Dispositioner/1. Confidentiality.md
+++ b/Dispositioner/1. Confidentiality.md
@@ -1,3 +1,33 @@
+> * Confidentiality
+> * Private og public key
+>     * Privat Key / Public key
+>     * Ciphertext
+> * Private Key System
+>     * One Time Pad
+>         * XOR 
+>         * Sikkerhed for One Time Pad
+>             * Bruteforce
+>     * Sikkerhed I secret-key
+>         * Samme key flere gange
+>         * NONCE
+>         * Exhaustive search
+>     * Ciphers
+>          * Stream Ciphers
+>          * Block Ciphers
+>     * Pro / Con
+>         * Hurtig / Nøgler
+> * Public Key System
+>     * Nøgler
+>     * Sikkerhed
+>     * Tilfældighed
+>     * Exhaustive search
+>     * RSA
+>         * Nøgler
+>         * (De)Kryptering
+>     * OAEP
+>         * Pks til Sks
+
+
 # Confidentiality
 
 Confidentiality, eller fortrolighed - altså at vi holder ting gemt for andre, kan vi inden for kryptografien gøre på to måder
@@ -53,7 +83,7 @@ Key er **tilfældig**, så kun bruteforce kan virke.
 
 Men fordi keyen er lige så lang som beskeden, vil det tage tiden 2^t hvor t er længden af m at bruteforce.
 
-> bruteforde tid = t^2
+> bruteforde tid = 2^t
 
 ##### Bruteforce
 
