--- a/Dispositioner/1. Confidentiality.md
+++ b/Dispositioner/1. Confidentiality.md
@@ -1,5 +1,4 @@
 > * Confidentiality
-> * Private og public key
 >     * Privat Key / Public key
 >     * Ciphertext
 > * Private Key System
@@ -9,15 +8,13 @@
 >             * Bruteforce
 >     * Sikkerhed I secret-key
 >         * Samme key flere gange
->         * NONCE
->         * Exhaustive search
+>         * Cost of attack
 >     * Ciphers
 >          * Stream Ciphers
 >          * Block Ciphers
 >     * Pro / Con
 >         * Hurtig / Nøgler
 > * Public Key System
->     * Nøgler
 >     * Sikkerhed
 >     * Tilfældighed
 >     * Exhaustive search
