--- a/Dispositioner/1. Confidentiality.md
+++ b/Dispositioner/1. Confidentiality.md
@@ -32,7 +32,7 @@ Confidentiality, eller fortrolighed - altså at vi holder ting gemt for andre, k
 ## Private og public key
 
 ### Privat key
-Enten bruger vi **private key**, hvor alle parter kender en hemmelig hed, som ingen andre må kende.
+Enten bruger vi **private key**, hvor alle parter kender en hemmelig kode, som ingen andre må kende.
 
 ### Public key
 Eller så bruger vi en **public key** system, hvor man har sin egen hemmelige nøgle, og andre har en offentlige nøgle.
@@ -59,7 +59,7 @@ Dette er ideen bag **One Time Pad**, hvor at en key kun bruges en gang.
 > One Time Pad
 > 
 > * Keys bruges kun en gang
-> * Keys er lige så lange beskeder
+> * Keys er lige så lange som beskeder
 > * Keys **XOR's** med beskeder for at få ciphertekst 
 
 Fordi XOR er en **uniform proces**, kan man ved at have ved at **have to fra sættes**
