--- a/Dispositioner/2. Authentication.md
+++ b/Dispositioner/2. Authentication.md
@@ -1,4 +1,19 @@
-{{TOC}}
+* Tabel løsning - ubetinget sikkerhed
+* Beregningstungt sikkerhed
+	* Secret key
+		* Algoritmer
+		* Sikkerhed
+		* Eksempel: CBC-MAC
+	* Public Key
+		* Algoritmer
+		* 	Sikkerhed
+		* Fordele ved public-key
+		* RSA Implementering
+		* RSA PROBLEM
+* Hashfunktioner
+	* RSA & Hash
+* Replay Attack
+	* NONCE
 
 # Authentication
 
@@ -6,7 +21,9 @@ Så når vi snakker om authentication, så er det ideen om, at vi vil kunne **be
 
 ## Tabel løsning - ubetinget sikkerhed
 
-En løsning der giver **ubetinget sikkerhed**, hvor det simpelt ikke er muligt at for en fremmed at udnytte systemet, at sender og modtager **aftaler** en MAC for hver mulig besked på forhånd.
+En løsning der giver **ubetinget sikkerhed**, hvor det simpelt ikke er muligt at for en fremmed at udnytte systemet.
+
+Sender og modtager **aftaler** en MAC for hver mulig besked på forhånd.
 
 > MAC = Message Authentication Code
 
@@ -15,7 +32,7 @@ En MAC er en **message authentication code**, og er unik og uafhængig af besked
 Når man **sender en besked**, sender man så den tilhørende MAC, så modtager kan tjekke at de passe sammen.
 
 > (en tilfældig tabel)
-> | MESSAGE | CODE |
+> | MESSAGE | MAC |
 > |:--|:--|
 > | HEY | 143 |
 
@@ -25,7 +42,7 @@ Derved kan samme besked dog kun sendes en gang, men en fremmed vil aldrig kunne 
 
 ## Beregningstungt sikkerhed
 
-I praksis er ubetinget sikkerhed ikke brugbart; hvorfor vi bruger sikkerhed baseret på beregningstunge algoritmer.
+I praksis er **ubetinget sikkerhed ikke brugbart**; hvorfor vi bruger sikkerhed baseret på beregningstunge algoritmer.
 
 Vi kigger derfor på to tilgange til dette.
 
@@ -44,7 +61,7 @@ Der er tre algoritme:
 
 I sådan et secret key system, så skal det **aldrig** være muligt for en fremmed at **lave en gyldig MAC**. 
 
-Det kunne han f.eks, hvis kan **ud fra nogle beskeder og deres MACs gennemskuer nøglen.**
+Det kunne han f.eks, hvis han **ud fra nogle beskeder og deres MACs gennemskuer nøglen.**
 
 Derfor bruges nøgler af 128bit længde, da det er for meget for moderne computere.
 
@@ -54,7 +71,7 @@ Derfor bruges nøgler af 128bit længde, da det er for meget for moderne compute
 
 Lad os tage et eksempel! **Cipher Block Chaining Mac**, er en algoritme til at lave MAC's med.
 
-Den laver en MAC ved dele beskeden op i dele, og så encode en del ad gangen.
+Den laver en MAC ved dele beskeden op i dele, og så maccer en del ad gangen.
 
 > C0 = IV
 > Ci = AESk(Mi ⊕ Ci-1)
@@ -70,7 +87,6 @@ Modtager kan så tjekke ved at lave samme udregning, og det virker fordi kun de 
 Et **public key system** er hvor hver har en privat key de holder for sig selv, og en public key som andre må kende til.
 
 Man kan da signere en besked med sin private nøgle, og andre kan tjekke den er fra en, ved at bruge ens public key.
-
 
 #### Algoritmer
 
