--- a/Dispositioner/2. Authentication.md
+++ b/Dispositioner/2. Authentication.md
@@ -1,19 +1,19 @@
-* Tabel løsning - ubetinget sikkerhed
-* Beregningstungt sikkerhed
-	* Secret key
-		* Algoritmer
-		* Sikkerhed
-		* Eksempel: CBC-MAC
-	* Public Key
-		* Algoritmer
-		* 	Sikkerhed
-		* Fordele ved public-key
-		* RSA Implementering
-		* RSA PROBLEM
-* Hashfunktioner
-	* RSA & Hash
-* Replay Attack
-	* NONCE
+> * Tabel løsning - ubetinget sikkerhed
+> * Beregningstungt sikkerhed
+> 	* Secret key
+> 		* Algoritmer
+> 		* Sikkerhed
+> 		* Eksempel: CBC-MAC
+> 	* Public Key
+> 		* Algoritmer
+> 		* 	Sikkerhed
+> 		* Fordele ved public-key
+> 		* RSA Implementering
+> 		* RSA PROBLEM
+> * Hashfunktioner
+> 	* RSA & Hash
+> * Replay Attack
+> 	* NONCE
 
 # Authentication
 
