3. Key Management and infrastructure

--- a/Dispositioner/3. Key Management and infrastructure.md
+++ b/Dispositioner/3. Key Management and infrastructure.md
@@ -85,7 +85,7 @@ Der består af:
 * Ens publik key
 * Og en signatur over disse to, signeret af CA'en
 
-Alle kan nu **tjekke dette certifikat**, fordi de har PKca. Og derved senere tjekke beskeder sendt med PKa.
+Alle kan nu **tjekke dette certifikat**, fordi de har PKca. Og derved senere sende beskeder krypteret med PKa
 
 ### Sikkerhed
 
@@ -163,7 +163,7 @@ En bruger kan også vælge at have en **passphrase istedet**, der anses for at v
 
 ### Hardware
 
-En anden måde en bruger kan tilkendegive sig selv på, er ved at bruge noget hardware. F.eks en usb nøgle.
+En anden måde en bruger kan tilkendegive sig selv på, er ved at **bruge noget hardware**. F.eks en usb nøgle.
 
 #### Tamper Evident
 
