3. Key Management and infrastructure TOC

--- a/Dispositioner/3. Key Management and infrastructure.md
+++ b/Dispositioner/3. Key Management and infrastructure.md
@@ -1,3 +1,26 @@
+* Session Keys
+	* Long term key
+* Key Distribution Centers
+	* Eksempel
+	* Problemer
+* Certification Authorities
+	* Registrering
+	* Sikkerhed
+	* Certificate Chains
+		* Eksempel, untrusted CA
+* Tilkendegivelse
+	* Kodeord
+		* Sikkerhed
+			* Kvalitet
+			* Server
+	* Hardware
+		* Tamper Evident
+				* Two Factor Authentication
+		* Tamper Resident
+	* Biometrics
+		* Buffer til forandring
+		* Pro / Con
+
 # 3. Key Management and infrastructure
 
 Så i kurset har vi snakket rigtig meget om nøgler, og nu skal vi så finde ud af - hvordan nøgler bliver administreret.
