--- a/Dispositioner/4. Network Security Mechanisms.md
+++ b/Dispositioner/4. Network Security Mechanisms.md
@@ -72,5 +72,5 @@ SSL bruger flere forskellige protokoller for at virke, men den der står for Aut
 
 Den virker ved at **clienten sender** en liste af **kryptoalgoritmer rangeret** som den gerne vil bruge; **serveren svarer** så hvilken en de skal bruge. Så sker key-exhange.
 
-![ssl handshake](/ssl_handshake.png)
+![ssl handshake](ssl_handshake.png)
 
