NETWORK SECURITY MECHANISMS

--- a/Dispositioner/4. Network Security Mechanisms.md
+++ b/Dispositioner/4. Network Security Mechanisms.md
@@ -70,7 +70,40 @@ I dag er det dog TLS, men den bliver bare kaldt SSL også.
 
 SSL bruger flere forskellige protokoller for at virke, men den der står for Authenticated Key Exchange hedder "Handshake Protocol". 
 
-Den virker ved at **clienten sender** en liste af **kryptoalgoritmer rangeret** som den gerne vil bruge; **serveren svarer** så hvilken en de skal bruge. Så sker key-exhange.
+Den virker ved at **clienten sender** en liste af **kryptoalgoritmer rangeret** som den gerne vil bruge; **serveren svarer** så hvilken en de skal bruge. Så sker key-exchange.
 
 ![ssl handshake](ssl_handshake.png)
 
+Ideen ligger i at:
+
+* Serveren beviser den kunne udtrække PMS, ved at sende en MAC af historikken
+* Clienten beviser den kunne kryptere PMS
+* Client beviser dens historik
+
+Ved at MAC deres **respektive views** af samtalen, kan de bevise at de **havde den samme samtale**, og at intet var ændret.
+
+Dette tvinger en **fremmed til kun at kunne forwarde beskeder, og ikke ændre dem**.
+
+I bund og grund virker SSL mellem en Server og en Client; **men kan være et-vejs** i det kun at serveren har et certfikat. Dette er **typisk for hjemmesider** og vil blive diskuteret senere. Men sikkerheden ligger i signatur + kryptering af deres beviser om historikken. 
+
+# 4. IPSec 
+
+IPSec er en række af protokoller der gør nogenlunde det **samme som SSL** gør; men det sker på et **lavere niveau**; nemlig nede i **transport laget**. 
+
+Det vil sige, at selve **forbindelsen mellem to IP'er** vil blive **sikker**. Alt dataen derimod fra samme IP går igennem samme tunnel. **IPSec** bruger Internet Key Exchange, som også er **public-key authenticated**, bare via Diffie Hellman Key Exchange.
+
+## 4.1 Diffie-Hellman key exchange
+
+Forstiller vi os at det følgende repræsentere Diffie Hellman, og at det blot ligeså er authenticated med public-key; så vil jeg gerne forklare det ved hjælp af farver; hvordan de bliver enige om en key.
+
+* De starter med en fælles engangsfarve Z
+* Vælger hver i sær en hemmelig farve (X og Y) som de blander i.
+* Sender blandingen til hinanden public
+* Den blanding de får tilsendt tilsætter de nu deres egen private farve i (X og y)
+* De har nu begge X + Y + Z.
+
+![Diffie-Hellman handshake](Diffie-Hellman.png)
+
+# 5. SSL vs IPSec
+
+# 6. Password key exchange
