NETWORK SECURITY MECHANISMS

--- a/Dispositioner/4. Network Security Mechanisms.md
+++ b/Dispositioner/4. Network Security Mechanisms.md
@@ -29,7 +29,7 @@ Protokollen har nogle betingelser:
 > * **Secrecy** and Authentication Hvis A vil snakke med B og A acceptere; så deltog B; og hvis B accepterede ville B og snakke med A. Ligeledes kender en fremmed hverken keyen fra A eller B.
 > * **Freshness** Hvis der udstedes en nøgle, skal den være ny
 
-# 2. Needham / Schroeder
+## 2. Needham / Schroeder
 Needham og Schroeder præsenterede engang en sådan protokol. 
 
 Den gik således:
@@ -42,7 +42,7 @@ Den gik således:
 
 Hvor Na og Nb er nonces.
 
-## 2.1 Udnyttelses angreb
+### 2.1 Udnyttelses angreb
 
 Men denne protokol, viste sig ikke at være rigtig.
 
@@ -56,7 +56,7 @@ Når A forsøger at kontakte E, kan E sende disse forespørgelser videre til B; 
 
 Så kan E udnytte A, til at opnå en sikker forbindelse med B, alt imens B tror den snakker med A.
 
-# 3. SSL 
+## 3. SSL 
 
 En protokol der virker, og som ofte bruges er SSL.
 
@@ -66,7 +66,7 @@ I dag er det dog TLS, men den bliver bare kaldt SSL også.
 
 > TLS ≅ SSL
 
-## 3.1 SSL Handshake
+### 3.1 SSL Handshake
 
 SSL bruger flere forskellige protokoller for at virke, men den der står for Authenticated Key Exchange hedder "Handshake Protocol". 
 
@@ -86,13 +86,13 @@ Dette tvinger en **fremmed til kun at kunne forwarde beskeder, og ikke ændre de
 
 I bund og grund virker SSL mellem en Server og en Client; **men kan være et-vejs** i det kun at serveren har et certfikat. Dette er **typisk for hjemmesider** og vil blive diskuteret senere. Men sikkerheden ligger i signatur + kryptering af deres beviser om historikken. 
 
-# 4. IPSec 
+## 4. IPSec 
 
 IPSec er en række af protokoller der gør nogenlunde det **samme som SSL** gør; men det sker på et **lavere niveau**; nemlig nede i **transport laget**. 
 
 Det vil sige, at selve **forbindelsen mellem to IP'er** vil blive **sikker**. Alt dataen derimod fra samme IP går igennem samme tunnel. **IPSec** bruger Internet Key Exchange, som også er **public-key authenticated**, bare via Diffie Hellman Key Exchange.
 
-## 4.1 Diffie-Hellman key exchange
+### 4.1 Diffie-Hellman key exchange
 
 Forstiller vi os at det følgende repræsentere Diffie Hellman, og at det blot ligeså er authenticated med public-key; så vil jeg gerne forklare det ved hjælp af farver; hvordan de bliver enige om en key.
 
@@ -104,6 +104,30 @@ Forstiller vi os at det følgende repræsentere Diffie Hellman, og at det blot l
 
 ![Diffie-Hellman handshake](Diffie-Hellman.png)
 
-# 5. SSL vs IPSec
+## 5. SSL vs IPSec
 
-# 6. Password key exchange
+Det er forskelligt hvornår man bruger hvad; og det kommer an på sitautionen. 
+
+Men fordi IPSec via på transport lageret; så lige så snart det kommer til **netværks-adapteren**, så er forbindelsen **ikke sikker** mere; så det kræver man stoler på sin egen hardware - derimod så kan **alle applikationer** på computeren nu bruge den tunnel.
+
+For **SSL** er man beskyttet helt op til **applikations laget**; hvilket betyder man er imun fra spyware osv.
+
+|  | IPSec | SSL |
+|:--|:--|
+| **Sikkerhed** | Netværks-adapter | Applikation |
+| **Fordele** | Kan bruges af flere | Imun for spyware mm. |
+| **Ulemper** | Kræver man stoler på hardware | |
+
+## 6. Password key exchange
+
+Som jeg nævnte før ved SSL, kan vi have det som one-way; hvor det **kun er Serveren der har et certificat** - og at det faktisk er det der **oftest sker med hjemmesider** etc. 
+
+Derfor bliver man på mange hjemmesider nød til at angive sig selv med en **bruger og et password**.
+
+### 6.1 Problem
+
+Men hvad er problemet så? Fordi at passwordet ikke er en central del af en protokol; mener nogle at sikkerheden derfor kun er baseret på passwordet - hvorfor de ligeså mener man bør designe en protokol omkring passwordet.
+
+Men at have en kryptering der kun er baseret på et long-term password, er usikkert; da en fremmed kan opsnappe noget ciphertekst og bruteforce koden offline - for derefter at bruge koden online.
+
+Password Authenticated Key Exchange virker nogenlunde ligesom Deffie; men bruger ens password til at kryptere kommunikationen - så man i sidste ende kan blive enige om en ny key som man fremadrettet bruger.
