NETWORK SECURITY MECHANISMS

--- a/Dispositioner/4. Network Security Mechanisms.md
+++ b/Dispositioner/4. Network Security Mechanisms.md
@@ -1,4 +1,19 @@
+* Motivation
+* Authenticated Key Exchange
+	* Lave sikker kommunikation
+	* Egenskaber
+* Needham / Schroeder
+	* Udnyttelses angreb
+* SSL
+	* SSL Handshake
+* IPSec
+	* Diffie-Hellman key exchange
+* SSL vs IPSec
+* Password key exchange
+	* Problem
+
 # Network Security Mechanisms
+_Motivation_
 
 Så det vi kender som internettet, er i bund og grund et **meget usikkert sted**; og man kan "nemt" som en fremmed **se hvad der sendes** frem og tilbage; nogle gange vil det dertil også være **muligt at ændre** på det.
 
@@ -17,7 +32,7 @@ En session key, er en midlertidig key man bruger til kommunikation. Det har føl
 > * Secret Key => Hurtig
 > * Mere sikker, da nøglen konstant udbyttes
 
-## 1.2 Egenskaber
+### 1.2 Egenskaber
 
 Helt konkret er det en protokol for to parter; hvor den bliver startet med intentionen om at etablere en key med den anden part. 
 
@@ -35,12 +50,14 @@ Needham og Schroeder præsenterede engang en sådan protokol.
 Den gik således:
 
 > * A krypter (IDa, Na), under PKb og sender
-> * B dekryptere, tjekker id og sender (Na, Nb) under Pia
+> * B dekryptere, tjekker id og sender (Na, Nb) under PKa
 > * A dekryptere og tjekker Na er rigtig og sender Nb tilbage
 > * B godkender Nb
 > * Begge lever en key fra Na og Nb
 
 Hvor Na og Nb er nonces.
+
+![Needham / Schroeder](NeedhamSchroeder.png)
 
 ### 2.1 Udnyttelses angreb
 
