--- a/Dispositioner/4. Network Security Mechanisms.md
+++ b/Dispositioner/4. Network Security Mechanisms.md
@@ -130,11 +130,11 @@ Men fordi IPSec via på transport lageret; så lige så snart det kommer til **n
 For **SSL** er man beskyttet helt op til **applikations laget**; hvilket betyder man er imun fra spyware osv.
 
 
-|  | IPSec | SSL |
-|---|---|---|
-| **Sikkerhed** | Netværks-adapter | Applikation |
-| **Fordele** | Kan bruges af flere | Imun for spyware mm. |
-| **Ulemper** | Kræver man stoler på hardware | |
+> |  | IPSec | SSL |
+> |---|---|---|
+> | **Sikkerhed** | Netværks-adapter | Applikation |
+> | **Fordele** | Kan bruges af flere | Imun for spyware mm. |
+> | **Ulemper** | Kræver man stoler på hardware | |
 
 ## 6. Password key exchange
 
