--- a/Dispositioner/6. Threats and Pitfalls.md
+++ b/Dispositioner/6. Threats and Pitfalls.md
@@ -26,7 +26,7 @@ Når vi tænker på IT-systemer, skal vi altid **overveje sikkerhed**. Derfor ar
 > * Hvilken grader vi tager os af dem
 > * Mængden af forsvar mod dem
 
-## 1. Taxonomy
+## Taxonomy
 
 Der er en række forskellige måder at definere angreb på, betegnet med følgende modeller.
 
