--- a/Dispositioner/8. Synchronous Agreement.md
+++ b/Dispositioner/8. Synchronous Agreement.md
@@ -1,3 +1,18 @@
+* Motivation, clockdrift
+* Round Based protocols
+	* Tid
+	* Runder
+	* Protokol
+* The Scheduled Broadcast Problem
+	* Egenskaber
+		* Validity
+		* Agreement
+		* Termination
+* Dolev Strong løsning
+	* Ideen
+	* Protokollen
+		* Egenskaber
+
 # Synchronous Agreement
 
 ## Motivation, clockdrift
@@ -12,3 +27,148 @@ Specielt når vi tænker på rumskibe, fly, sundhedsvæsnet osv.
 
 ## Round Based protocols
 
+### Tid
+
+Hvis vi skal have **flere parter** i et **distribueret system** til at arbejde efter tid; som synchronous agreement handler om; så **kræver det** at de på sigt til dels er **enige om hvad klokken er**.
+
+Så hvis vi har en **leder i systemet**, med en **præcis klok** - så lader vi da bare alle de **andre parter i systemet spørge** lederen om hvad klokken er! Yes det gør vi!
+
+Åh nej vent... Det kommer jo ikke til at virke; for vi ved ikke hvor lang tid det **tager at spørge og svare** - så det svar vi får fra lederen; passer jo ikke mere. Og hvis vi er **mange der spørger**; og får svar på **vidt forskellige tidspunkter** - har vi en masse forskellige billeder af hvad klokken er!
+
+Det viser sig at være yderst svært at blive enige om hvad klokken er.
+
+### Runder
+
+**Antager** vi, at man kan blive enige om **hvad klokken er**; så kan man lave et distribueret system **der arbejder på runder**.
+
+Ideen er:
+
+> I hver runde, kan hver part sende en besked
+
+Men for det kan virke, skal vi tillade følgende:
+
+> * **Offset**: Hvor meget et ur drifter
+> * **Trans**: tiden det for at sende
+
+Man kan da **vide**, om en **besked er sendt** eller ej efter
+
+> t + 2Offset + Trans
+
+Da begge klokke kan drifte.
+
+Derved kan vi ved disse **bounds, undgå at miste beskeder**.
+
+### Protokol
+
+Hvis vi kender:
+
+> * MaxTrans
+> * MaxOffset
+> * MaxComputation
+
+Kan vi sætte timeouts for hvornår en besked der er sendt i en runde, skal være kommet.
+
+En runde har derfor længden:
+
+> `slotLength = 2MaxDrift + MaxTrans + MaxComputation`
+
+Så starter en runde _r_ ved:
+
+> `start = T0 + r * slotLength`
+
+Og slutter ved
+
+> `slut = T0 + r * slotLength + slotLength`
+
+Og runden løber da fra
+
+> `Runde^i = [start^i; slut^i[`
+
+En protokol[^Mange detaljer er taget fra her] med runder forløber da således:
+
+> * Alle starter i runde 0
+> * Start beskeder sendes ved `slut^0`
+> * Runde **r** gemmer Pi første besked fra Pj fra runde **r-1**
+> * Udregn og send til alle
+
+Modtager vi ikke en besked mellem 
+
+> `[start - 2MaxDrift; start + MaxTrans + 2MaxDrift]`
+
+Anser vi den part som crashet eller ond.
+
+## The Scheduled Broadcast Problem
+
+Så nu når vi har runder på plads; så lad os **snakke om et problem**: The Scheduled Consensus Broadcast Problem.
+
+> Pj ved Pi skal sende en besked klokken t; hvorefter Pj skal levere den
+
+For en protokol til korrekt at udføre dette, skal alle ærlige parter køre protokollen i samme runde.
+
+### Egenskaber
+
+#### Validity
+> * **Validity**: Hvis B er korrekt, så er alle ærlige parters resultat m
+
+#### Agreement
+> * **Agreement**: Alle ærlige parter vil udregne samme resultat
+
+#### Termination
+> * **Termination**: Alle ærlige parter vil på sigt udregne et resultatet
+
+## Dolev Strong løsning
+
+**Dolev Strong** protokollen kan gøre dette ved at **bruge signature**.
+
+Den er til for authentikeret broadcast ved **t < n**.
+
+> Dolev Strong: t < n
+
+Den virker ved at bruge signature under et public-key system; hvorfor protokollen kun er så sikker som key systemet er.
+
+### Ideen
+
+Ideen ved protokollen; er at ud fra hvad en broadcaster B siger, så vil alle udskrive  beskeden hvis _m_:
+
+> * I runde _r_ har _r_ unikke signature
+> * En signatur fra B
+
+### Protokollen
+
+**Generelt**:
+
+> * Bekseder sendes med en signatur
+
+Hver Pi holder nogle variabler:
+
+>   * Resultat; kaldet Ri
+>   * Vidersendte beskeder; kaldet Vi
+
+
+**Indledenderunde (1)**:
+
+> * D flooder `(m, {SIGNd(m)})` og sætter _Rd = m_
+
+
+**I runderne: _2, ..., n + 1_:**
+
+> * Pj modtager en _m_ og et sæt af signature _S_, hvor _Vj_ ikke indeholder _m_, så er _S_ valid hvis:
+>  * 1) Alle kan verificeres til _m_
+>  * 2) En er fra D
+>  * 3) Antallet er _r ≤_ unikke; 
+> * Og derfor så signere _m_ og send `(m, S + SIGNj(m))` til alle; samt tilføj _m_ til _Vi_
+> 
+
+**Udgangsrunde**:
+
+> * For hver Pj med EN slags besked i Vi, så sæt Rj = m, ellers Rj = NoMsg
+
+#### Egenskaber
+
+Det er nemt at se at vi har **termination**; da **alle sætter Rj til sidst**.
+
+For at argumentere for **Agreement, så ser vi på runden r hvor korrekte Pi tilføjer m til Vi**. Sættet af signature **S er da validt; hvorfor S**' der sendes videre vil være **validt**.
+
+**Hvis r var sidste runde**; vil Pj allerede **have m i Vj**, og hvis der er en **runde mere**, vil **Pj tilføje m til Vj** i den runde, **da S' er valid**.
+
+For **Validity** gælder det; at en S kun kan være valid sålænge B signerede m. Så siden B kun signere m, så vil ingen ærlig P have `V != m`.
