--- a/Dispositioner/9. Asynchonous Agreenment.md
+++ b/Dispositioner/9. Asynchonous Agreenment.md
@@ -1,3 +1,17 @@
+* Motivation
+* Unscheduled Broadcast
+	* Betingelser for asynkron protokol
+		* Kommandoer
+		* Egenskaber
+	* Bracha Broadcast
+		* Ideen
+		* Protokollen
+		* Analyse
+* Asyncronous Byzantine Agreement
+	* Weak Agreement
+		* Protokollen
+	* Fra Weak Agreement til Non-Terminating
+
 _Note: den her er ikke så lang, men den er svær og meget der skal skrives på tavlen. Så der burde være nok fyld. Tager den for lang tid, så tag de sidste punkter fra._
 
 # Asynchonous Agreenment
